--- a/presentation/input_bindings.tex
+++ b/presentation/input_bindings.tex
@@ -849,6 +849,10 @@
         \item Rust: \textit{verbose} \rsin{HashMap} construction
             \begin{itemize}
                 \item \textit{Macro metaprogramming}
+                    \begin{itemize}
+                        \item \textit{Declarative}: eliminate duplicate code
+                        \item \textit{Procedural}: operate on AST
+                    \end{itemize}
             \end{itemize}
 
         \item Example: Constructing mouse bindings in \textsc{wmRS}'s using \textit{declarative macros}:\\[3pt]
@@ -863,7 +867,7 @@
   );
 \end{minted}
 
-        \item \cpp: no similarly powerful metaprogramming feature
+        \item \cpp: no such feature
 
     \end{itemize}
 
