--- a/seminar/conclusion.tex
+++ b/seminar/conclusion.tex
@@ -3,11 +3,11 @@
 
 In this seminar, we have compared Rust and \cpp in their \textit{pragmatics}
 when writing medium to large system software. Specifically, we have sought to
-achieve \textit{the same objective} using both languages: the implementing
-of a window manager. In doing so, we have discussed four core phases in the
-implementation of such software: external dependency management, the main event
-loop and event dispatch, input bindings and the storage of callable objects,
-and, finally, the central storage and distributed mutating of state.
+achieve \textit{the same objective} using both languages: the implementation of
+a window manager. In doing so, we have discussed four core phases in the design
+of such software: external dependency management, the main event loop and event
+dispatch, input bindings and the storage of callable objects, and, finally, the
+central storage and distributed mutating of state.
 
 While Rust is able to make certain guarantees in regard to memory safety and
 data races---making it an eminently safer choice compared to \cpp---it is
