--- a/presentation/objective.tex
+++ b/presentation/objective.tex
@@ -7,24 +7,24 @@
     \textit{Case Study}: The implementation of a \underline{window manager}
 
     \begin{itemize}
-        \item \tbf{System Software}\\
+        \item \tbf{System software}\\
             \begin{itemize}
                 \item Low-level
                 \item Platform-specific
             \end{itemize}
 
-        \item \tbf{Medium to Large-Sized}\\
+        \item \tbf{Medium to large-sized}\\
             \begin{itemize}
-                \item Increased Risk of \textit{Code Smells}
+                \item Increased risk of \textit{code smells}
                     \begin{itemize}
                         \item Monolithic classes
                         \item Global data
-                        \item High interdependence (Coupling)
+                        \item High interdependence (coupling)
                         \item ...
                     \end{itemize}
             \end{itemize}
 
-        \item \tbf{Event-Driven}\\
+        \item \tbf{Event-driven}\\
             \begin{itemize}
                 \item Reacts to windowing system events
                 \item Deterministic event dispatch
