--- a/seminar/main_event_loop.tex
+++ b/seminar/main_event_loop.tex
@@ -191,7 +191,7 @@ class, partly looks as follows:
     // ...
   private:
     // ...
-    struct EventVisitor
+    struct EventVisitor final
     {
       EventVisitor(Model& model): model(model) {}
 \end{cppblock}
