--- a/seminar/seminar.bib
+++ b/seminar/seminar.bib
@@ -134,6 +134,14 @@
   url =          "https://github.com/deurzen/wzrd"
 }
 
+@misc { kranewm,
+  author =       {Max van Deurzen},
+  title =        "{kranewm: An ICCCM \& EWMH compliant X11 (XCB) reparenting, dynamic window manager, written in C++}",
+  date =         {25 May},
+  year =         "2021 (accessed May 25, 2021)",
+  url =          "https://github.com/deurzen/kranewm"
+}
+
 @Book{ therustbook,
   author =       "Steve Klabnik and Carol Nichols",
   title =        "The {Rust} Programming Language",
